<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Finance Management</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Customer</string>
    <string name="user"></string>
    <string name="loanamount">Sum</string>
    <string name="rate">Rate(%)</string>
    <string name="time">Time(M)</string>
    <string name="save">Save</string>
    <string name="emi">EMI</string>
    <string name="emivalue"></string>
    <string name="newentry">Enter New</string>
    <string name="showold">Show Old</string>
    <string name="history">History</string>
    <string name="display">Display</string>
    <string name="amount"></string>
    <string name="Intrate"></string>
    <string name="timeframe"></string>
    <string name="uname">Enter User Name</string>
    <string name="update">Update EMI</string>
    <string name="usern">User</string>
    <string name="username1"></string>
    <string name="amount1">Amount</string>
    <string name="sum1"></string>
    <string name="save1">Submit</string>
    
    <style name="ButtonText">
    <item name="android:layout_width">fill_parent</item>
    <item name="android:layout_height">wrap_content</item>
    <item name="android:textColor">#ffffff</item>
    <item name="android:gravity">center</item>
    <item name="android:layout_margin">3dp</item>
    <item name="android:textSize">30sp</item>
    <item name="android:textStyle">bold</item>
    <item name="android:shadowColor">#000000</item>
    <item name="android:shadowDx">1</item>
    <item name="android:shadowDy">1</item>
    <item name="android:shadowRadius">2</item>
</style>
    <string name="agent">Agent</string>
    <string name="agentid"></string>
    <string name="dateRec">Start Date</string>
    <string name="location">Location</string>
    <string name="agent1"></string>
    <string name="date1"></string>
    <string name="location1"></string>
    <string name="custname">Customer</string>
    <string name="loanAmt">Loan Amt</string>

</resources>
